Fixed page overflow

--- a/web/v2/frontend/src/components/Login/Login.css
+++ b/web/v2/frontend/src/components/Login/Login.css
@@ -1,6 +1,7 @@
 .page-container {
     background-color: #1D2832;
     color: #F2F2F2;
+    overflow-x: hidden;
     height: 100%;
     width: 100%;
     position: absolute;
